--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-sync twitter status to other sites (sina weibo, renren, douban, etc..)
+sync twitter status to other sites (sina weibo, renren, douban, facebook,  etc..)
 
 wet = we t, 我推!
 
@@ -13,8 +13,10 @@ wet = we t, 我推!
     2. 同步renren: 编辑conf.py, 填入renren的帐号, 密码
     3. 同步sina: 编辑conf.py, 填入sina的帐号, 密码
     4. 同步douban: 编辑conf.py, 填入douban的帐号, 密码
-    5. 把main.py加入crontab, 5分钟一次就好
+    5. 同步facebook: 编辑conf.py, 填入facebook的帐号, 密码
+    6. 把main.py加入crontab, 5分钟一次就好
 
 # TODO
+    * 基于tornado写一个web端
     * [DONE] 把sina的oauth改成python模拟发推, 不然xx会就被封了. 
-    * 加入douban, facebook等的支持
+    * [DONE] 加入douban, facebook等的支持
