--- a/README
+++ b/README
@@ -12,11 +12,15 @@ wet = we t, 我推!
     1. 编辑conf.py, 输入要同步的twitter帐号
     2. 同步renren: 编辑conf.py, 填入renren的帐号, 密码
     3. 同步sina: 编辑conf.py, 填入sina的帐号, 密码
+    3.1 现在sina改为走openapi, 需要一下步骤
+        sh sina/download_sinatpy.sh
+        去open.weibo.com申请一个应用, 编辑sina/conf.py填入comsumer_key和consumer_secret 
+        python sina/get_oauthed.py使自己的weibo帐号和应用绑定
     4. 同步douban: 编辑conf.py, 填入douban的帐号, 密码
     5. 同步facebook: 编辑conf.py, 填入facebook的帐号, 密码
     6. 把main.py加入crontab, 5分钟一次就好
 
 # TODO
     * 基于tornado写一个web端
-    * [DONE] 把sina的oauth改成python模拟发推, 不然xx会就被封了. 
+    * 把sina的oauth改成python模拟发推, 不然xx会就被封了. 
     * [DONE] 加入douban, facebook等的支持
