--- a/README
+++ b/README
@@ -12,7 +12,7 @@ wet = we t, 我推!
     1. 编辑conf.py, 输入要同步的twitter帐号
     2. 同步renren: 编辑conf.py, 填入renren的帐号, 密码
     3. 同步sina: 编辑conf.py, 填入sina的帐号, 密码
-    3.1 现在sina改为走openapi, 需要一下步骤
+    3.1 现在sina改为走openapi, 需要以下步骤
         sh sina/download_sinatpy.sh
         去open.weibo.com申请一个应用, 编辑sina/conf.py填入comsumer_key和consumer_secret 
         python sina/get_oauthed.py使自己的weibo帐号和应用绑定
