添加对qq微博的支持

--- a/README
+++ b/README
@@ -18,9 +18,10 @@ wet = we t, 我推!
         python sina/get_oauthed.py使自己的weibo帐号和应用绑定
     4. 同步douban: 编辑conf.py, 填入douban的帐号, 密码
     5. 同步facebook: 编辑conf.py, 填入facebook的帐号, 密码
-    6. 把main.py加入crontab, 5分钟一次就好
-    7. 同步rss到sina:
-    7.1 确保完成3及3.1
+    6 同步qq微博: 编辑conf.py, 填入qq微博的帐号, 密码
+    7. 把main.py加入crontab, 5分钟一次就好
+    8. 同步rss到sina:
+    8.1 确保完成3及3.1
         编辑conf.py, 把rss的url填入到feed中
         sh rss/download_feedparser.sh
         把rss2sina.py加入crontab
