--- a/README
+++ b/README
@@ -14,11 +14,15 @@ wet = we t, 我推!
     3. 同步sina: 编辑conf.py, 填入sina的帐号, 密码
     3.1 现在sina改为走openapi, 需要以下步骤
         sh sina/download_sinatpy.sh
-        去open.weibo.com申请一个应用, 编辑sina/conf.py填入comsumer_key和consumer_secret 
+        去open.weibo.com申请一个应用, 编辑sina/conf.py填入consumer_key和consumer_secret 
         python sina/get_oauthed.py使自己的weibo帐号和应用绑定
     4. 同步douban: 编辑conf.py, 填入douban的帐号, 密码
     5. 同步facebook: 编辑conf.py, 填入facebook的帐号, 密码
-    6 同步qq微博: 编辑conf.py, 填入qq微博的帐号, 密码
+    6. 同步qq微博: 编辑conf.py, 填入qq微博的帐号, 密码
+    6.1 走openapi, 需要一下步骤
+        sh qq/download_qqweibo.sh
+        去open.t.qq.com申请一个应用, 编辑qq/conf.py, 填入consumer_key和consumer_secret
+        python qq/get_oauthed.py使自己的qq微博帐号和应用绑定
     7. 把main.py加入crontab, 5分钟一次就好
     8. 同步rss到sina:
     8.1 确保完成3及3.1
